fix: model card global class and white space in card
Fix the model card global class to a generic card global class, also removed the white space between the image and the name on the card

--- a/src/stylesheets/components/card.css
+++ b/src/stylesheets/components/card.css
@@ -5,6 +5,8 @@
 
 .card-container {
   /* Display */
+  display: flex;
+  flex-direction: column;
   border-radius: 1rem;
   transform: scale(1);
   transition: transform 0.3s ease;
